修改星之奏歌词翻译

--- a/article/sg0/doc/0022.md
+++ b/article/sg0/doc/0022.md
@@ -3,15 +3,15 @@
 > [ 2010/12/18 铃羽视角 ] 铃羽病后康复期难得的平静日常。第一次听由季唱《星之奏》。  
 
 那之后过了 3 天，铃羽依然处于被照顾的状态。由季每天都会和真由理一起来看望。正因如此，铃羽能够吃到有营养的东西，烧完全退了。接下来只要恢复了体力，就完全康复了。尽管这样，由季还是说“请接着静心养病”。归咎于此——或者应该说，托她的福——尽管现在是白天，铃羽还是躺在沙发上打着盹。刚刚开始有点清醒时，通过微弱的意识——好像从远处的某个地方，传来了非常五音不全的歌声。  
-*♪\~有个要寻找的东西\~星星在对我笑眯眯\~♪*  
-*♪\~随着风眼睛眨呀眨\~伸出手的话就能够抓到哟\~♪*  
+*♪~有个要寻找的东西~星星在对我笑眯眯~♪*  
+*♪~随着风眼睛眨呀眨~伸出手的话就能够抓到哟~♪*  
 伴随着水声听见了这歌声，是在淋浴吧。  
 这……是什么歌啊？  
 铃羽小时候也听过妈妈唱着这首歌。然而歌的具体内容，因为已经是很久以前了，无论如何都想不起来。  
 必须起床了。不能一直睡着……但是，想要眼睛睁开，眼皮却不听话。身体还需要休息吗……果然如同妈妈说的那样，可能还应该静心养病。  
 “唔……嗯……”  
 铃羽小声哼哼着，扭动着身体，导致毛毯掉到地板上。可是连把它捡起来的力气都没有。  
-“啊\~呀……”  
+“啊~呀……”  
 有人从桶子平时用的个人电脑桌子那里站起来，来到铃羽的身边，给她重新盖好了毛毯。  
 真由姐的味道……  
 即使没有特意喷香水之类的，真由理的身上也散发着不可思议的香味。微甜的、有着优美颜色的花一样的芳香。这是，在遥远的未来失去心爱的妈妈那一夜，整整一夜，把铃羽抱在怀中的真由姐身上同样散发着的香气。  
@@ -27,17 +27,17 @@
 铃羽孩子一般直率地回应着。突然她意识到这点，神志清醒了过来。果然自己的内心正变得软弱。意识到这点而变得愕然的铃羽，强行让大病初愈的自己从沙发上起来。感觉大脑在摇动，身体就像要前倾倒下一样，铃羽还是握着沙发背，想用双脚站起来。  
 “啊，不可以哦！这样突然起来……”  
 “已经没事了。给你添麻烦了呢，真由姐。”  
-“麻烦什么的，没有哦\~”  
+“麻烦什么的，没有哦~”  
 真由理走进厨房，给上面放着炖锅的煤气灶点火。噗噗作响的滚水声和香味充满了 LAB。真由理用一边用勺子搅拌一边尝味道，向铃羽笑了。  
-“喔\~大成功呢\~”  
+“喔~大成功呢~”  
 “真由姐做的吗？”  
-“嗯\~托由季的福，真由喜的厨艺在突飞猛进的哦！”  
+“嗯~托由季的福，真由喜的厨艺在突飞猛进的哦！”  
 “爸……哥哥呢？”  
-“去 *MayQueen* 了哦\~据说那之后有打工。”  
+“去 *MayQueen* 了哦~据说那之后有打工。”  
 “这样啊……”  
 “啊，你在想既然桶子君不在，晚上要出门之类的吧？不可以的哦！”  
 “没事……”  
-“才不是没事呢！你这么说的话，要让由季来教育你哦\~”  
+“才不是没事呢！你这么说的话，要让由季来教育你哦~”  
 “嗯？我怎么了？”  
 由季把淋浴间的帘子拉开，皮肤微微发红地从淋浴间里出来了。  
 “铃小姐她，不肯睡觉呢！”  
@@ -50,10 +50,10 @@
 “知道了啦……”  
 铃羽闹别扭一样地咕咚倒下，裹上了被子。  
 对真由姐能够直截了当地说出自己想法的铃羽，面对由季却无论如何都没办法强硬起来。  
-“诶嘿嘿\~”  
+“诶嘿嘿~”  
 “什么？”  
 看着两人相处的真由理突然可爱地笑了出来，引得铃羽不明就里地发问。  
-“觉得铃小姐这么看的话，好可爱呢\~”  
+“觉得铃小姐这么看的话，好可爱呢~”  
 “什……”  
 “现在的样子如果给桶子君看见了，可能有点危险哦——？”  
 “是的呢，我也这么觉得。有时会想，他们俩真的是兄妹吗？”  
@@ -62,15 +62,15 @@
 “害羞什么的才没有呢！”  
 “真的吗？”  
 “当然咯。为什么我会——”  
-“一边这样说一边害羞的铃小姐，果然可爱呢\~”  
-“是萌呢，萌\~”  
+“一边这样说一边害羞的铃小姐，果然可爱呢~”  
+“是萌呢，萌~”  
 “讨、讨厌啊！”  
 对于两人的调笑铃羽无法再还口，只得扭向了一边。  
-“那么，真由喜马上得去打工了\~”  
+“那么，真由喜马上得去打工了~”  
 “不吃炖菜吗？”  
-“打完工回来的时候准备顺道再来这边一趟。想那个时候吃\~”  
+“打完工回来的时候准备顺道再来这边一趟。想那个时候吃~”  
 “那我做点沙拉什么的放着，和那一起吃吧。”  
-“谢谢，由季。我很期待呢\~”  
+“谢谢，由季。我很期待呢~”  
 真由理反复叮嘱铃羽“不睡觉可不行哦——”，出门去 *MayQueen+Nyan²* 了。
 
 留下来的由季把真由理做的炖菜稍微调整了一下味道，关掉了火。  
